--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
             <div class="row justify-content-end align-items-center">
 
                 <div class="col-2 d-flex justify-content-end">
-                    <select name="first" id="first" class="rounded-1 p-2">
+                    <select name="first" id="first" class="rounded-1 p-2 border_lightpink">
                         <option value="">Sort by Latest</option>
                         <option value="latest">Latest</option>
                         <option value="price_low">Price</option>
